@@ -17,11 +17,17 @@ import org.springframework.validation.annotation.Validated;
 
 import java.io.IOException;
 import java.util.*;
-import java.util.stream.Collectors;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 @Service
 @Validated
 public class UserService {
+
+    private static final Logger log = LoggerFactory.getLogger(UserService.class);
+
+    private static final String UPLOAD_FILE_ERROR_MESSAGE = "Failed to upload file";
 
     private final String[] allowedExtensions = {"png", "gif", "jpeg", "jpg"};
 
@@ -55,7 +61,7 @@ public class UserService {
     public List<UserDTO> convertToDtos(List<User> users) {
         return users.stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<User> getUserByEmail(String email) {
@@ -96,8 +102,8 @@ public class UserService {
                     regRequest.getEmail().trim().toLowerCase(), regRequest.getPassword(),
                     regRequest.getRole().trim().toUpperCase(), file.getOriginalFilename(), file.getBytes());
         } catch (IOException ex) {
-            System.out.println(ex.getMessage());
-            throw new InvalidParamException("Failed to upload file");
+            log.info(ex.getMessage());
+            throw new InvalidParamException(UPLOAD_FILE_ERROR_MESSAGE);
         }
     }
 
@@ -116,8 +122,8 @@ public class UserService {
                     userRequest.getEmail().trim().toLowerCase(), userRequest.getPassword(),
                     userRequest.getRole().trim().toUpperCase(), file.getOriginalFilename(), file.getBytes());
         } catch (IOException ex) {
-            System.out.println(ex.getMessage());
-            throw new InvalidParamException("Failed to upload file");
+            log.info(ex.getMessage());
+            throw new InvalidParamException(UPLOAD_FILE_ERROR_MESSAGE);
         }
     }
 
@@ -132,7 +138,7 @@ public class UserService {
                 throw new InvalidParamException("File must be an image");
             }
         } catch (IOException ex) {
-            throw new InvalidParamException("Failed to upload file");
+            throw new InvalidParamException(UPLOAD_FILE_ERROR_MESSAGE);
         }
 
         if (file.getSize() > 2 * 1024 * 1024) {
